# AudioPluginScanner

./: .gitignore  CMakeLists.txt  main.cpp  scanFile.h
